# mySFML

Snakz/: CMakeLists.txt
Snakz/include/: Food.hpp  GameState.hpp  PlayState.hpp  Snakz.hpp  StateManager.hpp
Snakz/src/: Food.cpp  PlayState.cpp  Snakz.cpp  StateManager.cpp  main.cpp
